Changelog Notes:
Adjusted Hardy regeneration rate.
Added Sandbox Options for:
-Hardy Regeneration Rate
-Pack Mule Weight Change
-Pack Mouse Weight Change
-Default Weight Change
-Global Weight Modifier.