@@ -80,7 +80,7 @@ UI_EN = {
     UI_trait_specaid = "Specialization: First Aid",
     UI_trait_specaiddesc = "You are specialized with First Aid.<br>Your dedication to this specialization limits your access to other skills.<br>You receive 25% XP from all other sources.<br>+8 First Aid<br>Has access to several unique recipes which allow the<br>improvisation of many medical items.",
     UI_trait_gordanite = "Gordanite",
-    UI_trait_gordanitedesc = "You are adept at using crowbars as weapons.<br>Your attacks with crowbars have a higher critical hit chance as well as increased base damage.<br>+1 Long Blunt",
+    UI_trait_gordanitedesc = "You are adept at using crowbars as weapons.<br>Your attacks with crowbars have a higher critical hit chance as well as increased base damage.<br>+1 Long Blunt<br>Effect scales with Long Blunt skill.",
     UI_trait_indefatigable = "Indefatigable",
     UI_trait_indefatigabledesc = "You're one hard person to kill. Whenever you are reduced below 15% HP, you are healed to full HP.<br>This effect may only occur once per 7 days and does not cure wounds.",
     UI_trait_badteeth = "Bad Teeth",
